# Gestiune-Transport-Public

./: Autobuz.cpp  Autobuz.h  CMakeLists.txt  Depou.cpp  Depou.h  Depouri.txt  Exceptii.h  Linie.cpp  Linie.h  Linii.txt  Manager.cpp  Manager.h  Meniu.cpp  Meniu.h  Militari.txt  Obor.txt  README.md  StefanCelMare.txt  Tramvai.cpp  Tramvai.h  Troleibuz.cpp  Troleibuz.h  Utilitare.h  Vehicul.cpp  Vehicul.h  main.cpp
