cmake_minimum_required(VERSION 4.1)
project(Tema2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tema2
        main.cpp
        Autobuz.h
        Tramvai.h
        Vehicul.h
        Vehicul.cpp
        Autobuz.cpp
        Tramvai.cpp
        Troleibuz.h
        Troleibuz.cpp
        Depou.cpp
        Depou.h)
